<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">官方跑跑</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
    <string name="label_login">手机号/昵称/邮箱</string>
    <string name="label_password">密码</string>
    <string name="sign_in">登录</string>
    <string name="label_phone">* 手机号码</string>
    <string name="label_verify_code">* 手机验证码</string>
    <string name="get_verify_code">获取短信验证码</string>
    <string name="label_name">* 昵称</string>
    <string name="label_email">Email</string>
    <string name="sign_up">注册</string>
    <string name="cart">购物车</string>
    <string name="search">搜索</string>
    <string name="into_shop">进入店铺</string>
    <string name="cart_total_label">总价(不含运费):</string>
    <string name="total_with_delivery_label">总价(含运费):</string>
    <string name="edit_address">修改地址</string>
    <string name="determine_purchase">确定购买</string>
    <string name="delivery_type">配送方式</string>
    <string name="delivery_price">配送费用</string>
    <string name="cart_to_order_plus_hint">菜品备注,例如:不辣,不葱</string>
    <string name="delivery_type_system">官方配送</string>
    <string name="order_status">订单状态</string>
    <string name="order_deliveryman">配送员</string>
    <string name="create_address">新建地址</string>
    <string name="new_address_hint">输入地址,在下拉框选择您所在位置</string>
    <string name="dian">点</string>
    <string name="my_orders">我的订单</string>
    <string name="my_addresses">我的地址薄</string>
    <string name="exit">退出</string>
    <string name="setting">设置</string>
    <string name="la_carte">点餐</string>
    <string name="goods_total_label">总计:</string>
    <string name="label_realname">真实姓名</string>
    <string name="label_plus">地址信息备注</string>
    <string name="label_address">地址</string>
    <string name="hint_address_plus">如:5楼301室</string>
    <string name="hint_address_realname">如:张三</string>
    <string name="hint_address_phone">如:13333333333</string>
    <string name="label_sign_up_password">* 密码</string>
    <string name="hint_password">必须6位或6位以上</string>
    <string name="hint_phone">一部手机只能注册一个帐号</string>
    <string name="hint_name">2~10位中英文</string>
    <string name="hint_email">填写邮箱能更好的保证您的账户安全,选填</string>
    <string name="sending">发送中</string>
    <string name="label_sign_up_password_confirmation">* 密码验证</string>
    <string name="hint_password_confirmation">请再输入一边密码</string>
    <string name="hint_verify_code">请点击上方按钮获取</string>
    <string name="params_name">昵称</string>
    <string name="params_password">密码</string>
    <string name="params_password_confirmation">密码验证</string>
    <string name="params_verify_code">手机验证码</string>
    <string name="params_email">Email</string>
    <string name="order_user">用户名称</string>
    <string name="home">首页</string>
    <string name="sent_to_before_at_label">预订送达时间</string>
    <string name="pack_fees">打包费</string>
    <string name="label_dashboard_middle_right">运费余额：</string>
    <string name="label_dashboard_middle_left">货款余额：</string>
    <string name="deliveryman_orders">已接订单</string>
    <string name="wait_deal_orders">待处理订单</string>


</resources>
