<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainActivity" android:orientation="vertical">
    <include layout="@layout/actionbar_back" android:id="@+id/actionbar"/>

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:paddingTop="10dp"
                      android:paddingBottom="10dp"
                      android:paddingLeft="15dp"
                      android:paddingRight="15dp"
                >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_login"
                    android:id="@+id/label_login"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_login"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_password"
                    android:id="@+id/label_password"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/et_password"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:background="@drawable/button"
                    android:id="@+id/btn_signin"
                    android:minHeight="40dp"
                    android:textColor="@android:color/white"
                    />
        </LinearLayout>
    </ScrollView>

    <com.mindpin.android.loadingview.LoadingView
            android:id="@+id/loading_view"
            style="@style/LoadingViewWithActionBar"
            android:visibility="gone"
            />
</LinearLayout>
